fix: employee table not showing No data to show upon filtering via departments

--- a/src/app/shared/ui/search-bar/search-bar.component.css
+++ b/src/app/shared/ui/search-bar/search-bar.component.css
@@ -8,6 +8,8 @@
     background: white;
     width: 100%;
     box-sizing: border-box;
+    max-width: 450px;
+    margin: 0 auto 1rem auto;
   }
   
   .search-pill input {
@@ -16,6 +18,7 @@
     width: 100%;
     background: transparent;
     min-width: 0;
+    padding-left: 1px;
   }
 
   :host {
